version/0.20/_sources/api/solver/_autosummary/settings/therm_exp_coeff.rst.txt
:orphan:

.. _therm_exp_coeff:

therm_exp_coeff
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.therm_exp_coeff.therm_exp_coeff
    :show-inheritance:

.. rubric:: Attributes

========================   ====================================================

Attribute                                                               Summary

========================   ====================================================
:ref:`option <option_7>`       Select method for calculating material property.

:ref:`value <value_3>`                     Specify the constant property value.

========================   ====================================================

.. rubric:: Included in:

====================================   ===================================

Parent                                                             Summary

====================================   ===================================
:ref:`fluid_child <fluid_child>`             'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`       'child_object_type' of mixture.

====================================   ===================================

