version/0.28/_sources/api/solver/_autosummary/settings/therm_exp_coeff.rst.txt
:orphan:

.. _therm_exp_coeff:

therm_exp_coeff
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.therm_exp_coeff
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================

Attribute                                                Summary

=========================   ====================================
:ref:`option <option_26>`       Select material property method.

:ref:`value <value_15>`         Specify constant property value.

=========================   ====================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

